--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 
     </section>
     <section id="club-ethos">
-        <h1>Why Love Running With Us!</h1>
+        <h2 id="welcome">Why Love Running With Us?</h2>
         <div id="left-about">
             <div class="left-about-heading">
-                <h2>Feel Healthy</h2>
+                <h2>Feel Healthy <i class="fas fa-heartbeat"></i></h2>
                 <hr>
                 <p>
                     Since it improves aerobic fitness, running is a great way to help improve your 
@@ -51,7 +51,7 @@
                 </p>
             </div>
             <div class="left-about-heading">
-                <h2>Feel Free</h2>
+                <h2>Feel Free <i class="fab fa-fly"></i></h2>
                 <hr>
                 <p>
                     Physical exercise, running included, is known to release endorphins in the brain. 
@@ -61,7 +61,7 @@
         </div>
         <div id="right-about">
             <div class="right-about-heading">
-                <h2>Get Social</h2>
+                <h2>Get Social <i class="fas fa-globe"></i></h2>
                 <hr>
                 <p>
                     When we run with others, we can run farther and faster more easily. Social running can pull you out of 
@@ -69,14 +69,20 @@
                 </p>
             </div>
             <div class="right-about-heading">
-                <h2>Feel Strong</h2>
+                <h2>Feel Strong <i class="fas fa-dumbbell"></i></h2>
                 <hr>
                 <p>
                     Running strengthens your heart by pumping blood more effectively through your body.
                 </p>
             </div>
         </div>
-        <div id="center-about">Center</div>
+        <div id="center-about">
+            <div id="circle-container">
+                <div id="circle-cover-bg">
+
+             </div>
+        </div>
+        </div>
     </section>
     <section>
         Running locations, distances and times
@@ -84,6 +90,9 @@
     <footer>
         Social links here
     </footer>
+
+    <--! font awesome script -->
+    <script src="https://kit.fontawesome.com/5d8268a498.js" crossorigin="anonymous"></script>
     
 </body>
 </html>
