--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
         @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
         </style>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Love Running, club for runners in Dublin, Ireland">
+    <meta name="description" content="Love Running club for runners in Dublin, Ireland">
     <meta name="keywords" content="love running, running club, ireland, dublin">
 
     <link rel="stylesheet" href="assets/css/style.css">
-
-    <link rel="stylesheet" href="style.css"
     <title>Love Running</title>
 </head>
 <body>
@@ -122,7 +119,24 @@
         </div>
     </section>
     <footer>
-        Social links here
+        <ul>
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in a new tab)"><i class="fab fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)"><i class="fab fa-youtube-square"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)"><i class="fab fa-instagram"></i></a>
+            </li>
+        </ul>
     </footer>
 
     <--! font awesome script -->
